--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "node-red-contrib-platio-openblocks",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/infoteria/node-red-contrib-platio-openblocks.git"
+  },
   "scripts": {
     "test": "mocha test/*.test.js"
   },
