--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "node-red-contrib-platio-openblocks",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
+  "keywords": [
+    "node-red"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/infoteria/node-red-contrib-platio-openblocks.git"
